--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Display";
 }
-
+<link href="~/admin/css/styles.css" rel="stylesheet">
 <div style="background-color: #fff;">
     <h4>Course</h4>
     <hr />
