--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Update.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
+    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2">Back to list</a>
 </div>
 
 @section Scripts {
