--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
@@ -28,6 +28,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="QuestionId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="Questions" asp-action="Index" asp-route-testId="@Model.TestId" class="btn btn-primary">Back to List</a>
     </form>
 </div>
