--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Display.cshtml
@@ -26,8 +26,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.TestId">Edit</a> |
-    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
+    <a asp-action="Edit" asp-route-id="@Model.TestId" class="btn btn-primary mx-2">Edit</a> |
+    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2">Back to list</a>
     <a asp-controller="Questions" asp-action="Add" asp-route-TestId="@Model.TestId" class="btn btn-primary mx-2">Add Question</a>
-    <a asp-controller="Tests" asp-action="Index" asp-route-TestId="@Model.TestId" class="btn btn-primary mx-2">List questions</a>
+    <a asp-controller="Questions" asp-action="Index" asp-route-TestId="@Model.TestId" class="btn btn-primary mx-2">List Questions</a>
 </div>
