--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
@@ -33,9 +33,9 @@
             
             
             <td>
-                <a asp-action="Update" asp-route-id="@item.TestId">Edit</a> |
-                <a asp-action="Display" asp-route-id="@item.TestId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TestId">Delete</a>
+                    <a asp-action="Update" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Edit</a> |
+                    <a asp-action="Display" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Delete</a>
             </td>
         </tr>
 }
