--- a/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
+++ b/Web_day_tieng_Anh/wwwroot/admin/css/styles.css
@@ -2575,17 +2575,17 @@ fieldset:disabled a.btn {
         border-color: #00C00F;
     }
 
-    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+ /*   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
     .show > .btn-primary.dropdown-toggle {
         color: #fff;
         background-color: #2653d4;
-        border-color: #244ec9;
+        border-color: #2653d4;
     }
 
         .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
         .show > .btn-primary.dropdown-toggle:focus {
-            box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
-        }
+            box-shadow: 0 0 0 0.2rem rgba(0, 255, 0, 0.5);
+        }*/
 
 .btn-secondary {
     color: #fff;
