--- a/Web_day_tieng_Anh/Views/Home/Courses.cshtml
+++ b/Web_day_tieng_Anh/Views/Home/Courses.cshtml
@@ -1,5 +1,13 @@
 ﻿@model IEnumerable<Web_day_tieng_Anh.Models.Course>
 @using Microsoft.AspNetCore.Identity
+
+
+@using System.IO
+@using Microsoft.AspNetCore.Hosting
+@inject IWebHostEnvironment HostingEnvironment
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -61,16 +69,17 @@
 
             <div class="container">
 
-                <div class="row">
+                @* <div class="row">
                     @{
                         int count = 0;
+
                         foreach (var item in Model)
                         {
                             if(count <= 6 )
                             {
                                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" data-course ="@item.CourseName">
                                     <div class="course-item">
-                                        <img src="~/img/course-1.jpg" class="img-fluid" alt="...">
+                                        <img src="~/img/hinh.jpg" class="img-fluid" alt="...">
                                         <div class="course-content">
                                             <div class="d-flex justify-content-between align-items-center mb-3">
                                                 <p class="category">@item.CourseName</p>
@@ -80,10 +89,10 @@
                                             <h3><a asp-area="" asp-controller="Home" asp-action="CoursesDetail" asp-route-id="@item.CourseId">@item.CourseName</a></h3>
                                             <p class="description">@item.CourseDescription</p>
                                             <div class="trainer d-flex justify-content-between align-items-center">
-                                                <div class="trainer-profile d-flex align-items-center">
-                                                    <img src="~/img/trainers/trainer-1-2.jpg" class="img-fluid" alt="">
-                                                    <a href="" class="trainer-link">Antonio</a>
-                                                </div>
+                                                 <div class="trainer-profile d-flex align-items-center">
+                                                     <img src="~/img/trainers/trainer-1-2.jpg" class="img-fluid" alt="">
+                                                     <a href="" class="trainer-link">Antonio</a>
+                                                 </div>
                                                 <div class="trainer-rank d-flex align-items-center">
                                                     <i class="bi bi-person user-icon"></i>&nbsp;50
                                                     &nbsp;&nbsp;
@@ -99,7 +108,57 @@
                     }
                     
 
+                </div> *@
+                <div class="row">
+                    @{
+                        int count = 0;
+                        var images = new List<string> {
+                    
+                    "img/imgcourse/h3.jpg",
+                    "img/imgcourse/h4.jpg",
+                    
+                    "img/imgcourse/h6.jpg",
+                    "img/imgcourse/h7.jpg"
+                    };
+
+                        foreach (var item in Model)
+                        {
+                            if (count <= 6)
+                            {
+                                var randomIndex = new Random().Next(0, images.Count); // Randomly select an index
+                                var randomImage = images[randomIndex]; // Get the randomly selected image path
+
+                                <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" data-course="@item.CourseName">
+                                    <div class="course-item">
+
+                                        <img src="~/@randomImage" class="img-fluid" alt="...">
+                                        
+                                        <div class="course-content">
+                                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                                <p class="category">@item.CourseName</p>
+                                                <p class="price">$ @item.Price</p>
+                                            </div>
+
+                                            <h3><a asp-area="" asp-controller="Home" asp-action="CoursesDetail" asp-route-id="@item.CourseId">@item.CourseName</a></h3>
+                                            <p class="description">@item.CourseDescription</p>
+                                            <div class="trainer d-flex justify-content-between align-items-center">
+                                                <div class="trainer-rank d-flex align-items-center">
+                                                    <i class="bi bi-person user-icon"></i>&nbsp;50
+                                                    &nbsp;&nbsp;
+                                                    <i class="bi bi-heart heart-icon"></i>&nbsp;65
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                count++;
+                            }
+                        }
+                    }
                 </div>
+
+                
 
             </div>
 
