--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Update.cshtml
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Display" asp-route-id="@Model.CourseId" class="btn btn-warning mb-3" style="color: #000;">Back</a>
 </div>
 
 @section Scripts {
