--- a/Web_day_tieng_Anh/Areas/Students/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Students/Views/Courses/Display.cshtml
@@ -70,9 +70,9 @@
     </div>
     <div class="row">
         <div class="col">
-                <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="custom-button">View Lesson</a></li>
-                <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="custom-button">View Test</a></i>
-                <a asp-action="Index" class="custom-button">Back</a>
+                <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="custom-button mx-2">View Lesson</a></li>
+                <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="custom-button mx-2">View Test</a></i>
+                <a asp-action="Index" class="custom-button mx-2">Back</a>
         </div>
     </div>
 </div>
