--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Delete.cshtml
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete" id="deleteForm">
         <input type="hidden" asp-for="CourseId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" style="color: #000" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
