--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -45,16 +45,16 @@
         <div class="col-sm-4 align-self-start">
             <ul style="list-style-type: none; margin: 0; padding: 0;">
                 <li>
-                    <a asp-area="Lecturers" asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px;">View All Test</a>
+                    <a asp-area="Lecturers" asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px; color: #000;">View All Test</a>
                 </li>
                 <li>
-                    <a asp-controller="Tests" asp-action="Add" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px;">Add Test</a>
+                    <a asp-controller="Tests" asp-action="Add" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px; color: #000;">Add Test</a>
                 </li>
                 <li>
-                    <a asp-area="Lecturers" asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px;">View All Lessons</a>
+                    <a asp-area="Lecturers" asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px; color: #000;">View All Lessons</a>
                 </li>
                 <li>
-                    <a asp-controller="Lessons" asp-action="Add" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px;">Add Lessons</a>
+                    <a asp-controller="Lessons" asp-action="Add" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2" style="margin-bottom: 10px; color: #000;">Add Lessons</a>
                 </li>
             </ul>
 
@@ -63,9 +63,9 @@
 </div>
 <div class="row">
     <div class="col">
-        <a asp-action="Update" asp-route-id="@Model.CourseId" class="btn btn-info mx-2" style="color: black;">Edit</a></li>
-        <a asp-action="Delete" asp-route-id="@Model.CourseId" class="btn btn-danger mx-2" style="color: black;">Delete</a>
-        <a asp-action="Index" class="btn btn-warning mx-2" style="color: black;">Back to List</a>
+        <a asp-action="Update" asp-route-id="@Model.CourseId" class="btn btn-info mx-2" style="color: #000">Edit</a></li>
+        <a asp-action="Delete" asp-route-id="@Model.CourseId" class="btn btn-danger mx-2" style="color: #000">Delete</a>
+        <a asp-action="Index" class="btn btn-warning mx-2" style="color: #000">Back to List</a>
     </div>
 </div>
 
