--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Add.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Add";
 }
+<link href="~/activetests/tests.js" rel="stylesheet">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- TinyMCE -->
@@ -20,6 +21,7 @@
         })
     </script>
 </head>
+<div class="container-fluid">
 <h1>Add</h1>
 
 <h4>Lesson</h4>
@@ -50,13 +52,13 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-controller="Courses" asp-action="Display" asp-route-id="@ViewData["CourseId"]" class="btn btn-warning mx-2" style="color: black;">Back</a>
+                <a asp-controller="Courses" asp-action="Display" asp-route-id="@ViewData["CourseId"]" class="btn btn-warning mx-2" style="color: #000;">Back</a>
 
             </div>
         </form>
     </div>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
