--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
@@ -45,8 +45,8 @@
     
 </div>
 <div>
-    <a asp-action="Update" asp-route-id="@Model.LessionId">Edit</a> |
+    <a asp-action="Update" asp-route-id="@Model.LessionId" class="btn btn-primary" style="color: #000">Edit</a> |
     
-    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
+    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-warning" style="color: #000;">Back to list</a>
 </div>
 
