--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Index.cshtml
@@ -10,7 +10,7 @@
     
     @* <a asp-action="Add">Create New</a> *@
     
-    <a asp-controller="Lessons" asp-action="Add" asp-route-courseId="@Model.FirstOrDefault()?.CourseId" class="btn btn-primary mx-2">Add</a>
+    <a asp-controller="Lessons" asp-action="Add" asp-route-courseId="@Model.FirstOrDefault()?.CourseId" class="btn btn-primary mx-2" style="color: #000;">Add</a>
     
     
 </p>
@@ -38,15 +38,15 @@
             </td>
             
             <td>
-                <a asp-action="Update" asp-route-id="@item.LessionId">Edit</a> |
-                <a asp-action="Display" asp-route-id="@item.LessionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LessionId">Delete</a>
+                    <a asp-action="Update" asp-route-id="@item.LessionId" class="btn btn-primary mx-2" style="color: #000;">Edit</a> |
+                    <a asp-action="Display" asp-route-id="@item.LessionId" class="btn btn-primary mx-2" style="color: #000;">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.LessionId" class="btn btn-danger mx-2" style="color: #000;">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
-<a asp-controller="Courses" asp-action="Display" asp-route-id="@Model.FirstOrDefault()?.CourseId" class="btn btn-warning mx-2" style="color: black;">Back</a>
+<a asp-controller="Courses" asp-action="Display" asp-route-id="@Model.FirstOrDefault()?.CourseId" class="btn btn-warning mx-2" style="color: #000;">Back</a>
 @section Scripts {
     <script>
         // Get all elements with class "serial-number"
