--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Update.cshtml
@@ -21,7 +21,7 @@
         })
     </script>
 </head>
-
+<div class="container-fluid">
 <h4>Lesson</h4
 
 <hr />
@@ -57,16 +57,16 @@
 
             
                 @* <input type="submit" value="Save" class="btn btn-primary" /> *@
-                <button type="submit" value="Save" class="btn btn-primary">Update</button>
+                <button type="submit" value="Save" class="btn btn-primary" style="color: #000;">Update</button>
             
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
+    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-warning mt-3 mb-3" style="color: #000;">Back to list</a>
 </div>
-
+</div>
 
 @if (!ViewData.ModelState.IsValid)
 {
