--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
@@ -43,21 +43,21 @@
                 <div class="form-group">
                     <label for="Answers_@(i)__AnswerContent" class="control-label">Answer @(char.ConvertFromUtf32(65 + i))</label>
                     <input id="Answers_@(i)__AnswerContent" name="Answers[@i].AnswerContent" class="form-control" />
+                    <input type="checkbox" id="Answers_@(i)__IsCorrect" name="Answers[@i].IsCorrect" value="true" /> Correct
                     <input type="hidden" name="Answers[@i].IsCorrect" value="false" />
-                    <input type="checkbox" name="Answers[@i].IsCorrect" value="true" /> Correct
+
                 </div>
             }
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary mx-2" />
+                <input type="submit" value="Create" class="btn btn-primary mx-2" style="color: #000;" />
             </div>
         </form>
     </div>
 </div>
 
-
 <div>
-    <a asp-controller="Questions" asp-action="Index" asp-route-testId="@ViewBag.TestId" class="btn btn-primary mx-2">Back to list</a>
+    <a asp-controller="Questions" asp-action="Index" asp-route-testId="@ViewBag.TestId" class="btn btn-primary mx-2 mb-3" style="color: #000;">Back to list</a>
 </div>
 
 @section Scripts {
@@ -65,3 +65,17 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(function (checkbox) {
+            checkbox.addEventListener('click', function () {
+                var checkedCheckboxes = document.querySelectorAll('input[type="checkbox"]:checked');
+                if (checkedCheckboxes.length > 1) {
+                    alert('Bạn chỉ được chọn một đáp án đúng.');
+                    checkbox.checked = false;
+                }
+            });
+        });
+    });
+</script>
