--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Delete.cshtml
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="QuestionId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Questions" asp-action="Index" asp-route-testId="@Model.TestId" class="btn btn-primary">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" style="color: #000;" /> |
+        <a asp-controller="Questions" asp-action="Index" asp-route-testId="@Model.TestId" class="btn btn-primary" style="color: #000;">Back to List</a>
     </form>
 </div>
