--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
@@ -20,7 +20,7 @@
         })
     </script>
 </head>
-
+<div class="container-fluid">
 <h1>Add</h1>
 
 <h4>Test</h4>
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-controller="Courses" asp-action="Display" asp-route-id="@ViewData["CourseId"]" class="btn btn-warning mx-2" style="color: black;">Back</a>
+                <a asp-controller="Courses" asp-action="Display" asp-route-id="@ViewData["CourseId"]" class="btn btn-warning mx-2" style="color: #000;">Back</a>
 
             </div>
                 
@@ -51,7 +51,7 @@
         </form>
     </div>
 </div>
-
+</div>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
