--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-controller="Tests" asp-action="Add" asp-route-courseId="@Model.FirstOrDefault()?.CourseId" class="btn btn-primary mx-2">Add</a>
+    <a asp-controller="Tests" asp-action="Add" asp-route-courseId="@Model.FirstOrDefault()?.CourseId" class="btn btn-primary mx-2" style="color: #000;">Add</a>
 </p>
 <table class="table">
     <thead>
@@ -33,15 +33,15 @@
             
             
             <td>
-                    <a asp-action="Update" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Edit</a> |
-                    <a asp-action="Display" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.TestId" class="btn btn-primary mx-2">Delete</a>
+                    <a asp-action="Update" asp-route-id="@item.TestId" class="btn btn-primary mx-2" style="color: #000;">Edit</a> |
+                    <a asp-action="Display" asp-route-id="@item.TestId" class="btn btn-primary mx-2" style="color: #000;">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.TestId" class="btn btn-danger mx-2" style="color: #000;">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
-<a asp-controller="Courses" asp-action="Display" asp-route-id="@Model.FirstOrDefault()?.CourseId" class="btn btn-warning mx-2" style="color: black;">Back</a>
+<a asp-controller="Courses" asp-action="Display" asp-route-id="@Model.FirstOrDefault()?.CourseId" class="btn btn-warning mx-2" style="color: #000;">Back</a>
 @section Scripts {
     <script>
         // Get all elements with class "serial-number"
