--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Update.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Update.cshtml
@@ -20,6 +20,7 @@
         })
     </script>
 </head>
+<div class="container-fluid">
 <h1>Update</h1>
 
 <h4>Test</h4>
@@ -42,16 +43,16 @@
                 <span asp-validation-for="TestDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="color: #000;" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2">Back to list</a>
+    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mb-3" style="color: #000;">Back to list</a>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
