--- a/Web_day_tieng_Anh/wwwroot/activetestsstudents/tests.css
+++ b/Web_day_tieng_Anh/wwwroot/activetestsstudents/tests.css
@@ -44,13 +44,14 @@ main {
     }
 
 .game-question-container {
-    width: 80%;
-    height: 8rem;
+    width: 30rem;
+    height: 10rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 2px solid darkgray;
     border-radius: 25px;
+    margin-bottom: 10rem;
 }
 
     .game-question-container h1 {
@@ -60,8 +61,8 @@ main {
     }
 
 .game-options-container {
-    width: 80%;
-    height: 12rem;
+    margin-top: 8rem;
+    height: 10rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -150,7 +151,13 @@ input[type=radio]:checked ~ .option {
     align-items: center;
     justify-content: space-around;
     border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 58%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
+
 
     .modal-content-container h1 {
         font-size: 1.3rem;
